progress in start frag. need to handle rotate and pop up for others

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Teeya_Li_MyRuns1</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_manual_input">ManualInput</string>
 </resources>
