changed title to be run2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Teeya_Li_MyRuns1</string>
+    <string name="app_name">Teeya_Li_MyRuns</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_manual_input">ManualInput</string>
